@@ -46,7 +46,7 @@ if (!$_student_) {
                 } else {
                     $currentUser  -> setSeenUnit($currentUnit, $currentLesson, 1);
                 }
-                eF_redirect("".basename($_SERVER['PHP_SELF'])."?view_unit=".$_GET['view_unit']);
+                eF_redirect(basename($_SERVER['PHP_SELF'])."?view_unit=".$_GET['view_unit']);
                 exit;	//<-- This exit is necessary here, otherwise test might be counted twice
             }
             $smarty -> assign("T_TEST_UNDERGOING", true);
@@ -86,13 +86,23 @@ if (!$_student_) {
             break;
         default:
             if (isset($_GET['confirm'])) {
+                //The user specified himself the size of the test
+                if ($_GET['user_configurable'] && $test -> options['user_configurable']) {
+                    //Get the size of the test, so that we can verify that the value specified is at most equal to it  
+	                $test  -> getQuestions();                                    //This way the test's questions are populated, and we will be needing this information
+	                $test -> options['random_pool'] && $test -> options['random_pool'] >= sizeof($test -> questions) ? $questionsNumber = $test -> options['random_pool'] : $questionsNumber = sizeof($test -> questions);
+                    //Assigning the 'user_configurable' value to the 'random_pool' option gives us a test instance with the appropriate number of questions 
+	                if (is_numeric($_GET['user_configurable']) && $_GET['user_configurable'] <= $questionsNumber) {                    
+                        $test -> options['random_pool'] = $_GET['user_configurable'];
+                    }
+                }
                 $testInstance = $test -> start($currentUser -> user['login']);
-                eF_redirect("".basename($_SERVER['PHP_SELF'])."?view_unit=".$_GET['view_unit']);
+                eF_redirect(basename($_SERVER['PHP_SELF'])."?view_unit=".$_GET['view_unit']);
                 exit;
             } else {
                 $testInstance = $test;
                 $test  -> getQuestions();                                    //This way the test's questions are populated, and we will be needing this information
-                $testInstance -> options['random_pool'] && $testInstance -> options['random_pool'] >= sizeof($testIn) ? $questionsNumber = $testInstance -> options['random_pool'] : $questionsNumber = sizeof($testInstance -> questions);
+                $testInstance -> options['random_pool'] && $testInstance -> options['random_pool'] <= sizeof($testInstance -> questions) ? $questionsNumber = $testInstance -> options['random_pool'] : $questionsNumber = sizeof($testInstance -> questions);            
             }
             break;
     }
@@ -105,6 +115,7 @@ if (!$_student_) {
     if (!isset($questionsNumber)) {
         $questionsNumber = sizeof($testInstance -> questions);
     }
+
     //$smarty -> assign("T_REMAINING_TIME", $remainingTime);
     $smarty -> assign("T_TEST_QUESTIONS_NUM", $questionsNumber);
     $smarty -> assign("T_TEST_DATA", $testInstance);
